# weltenwanderer2

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  deny.toml
.githooks/: pre-commit
blood-and-honor/: characters.ww  factions.ww  history.ww  locations.ww  mechanics.ww  world.ww
crates/ww-cli/: Cargo.toml
crates/ww-cli/src/: main.rs
crates/ww-cli/src/commands/: build.rs  check.rs  export.rs  graph.rs  init.rs  list.rs  mod.rs  new.rs  play.rs  search.rs  show.rs  simulate.rs  solo.rs  timeline.rs  tui.rs
crates/ww-cli/src/tui/: app.rs  mod.rs
crates/ww-cli/src/tui/views/: entity_detail.rs  entity_list.rs  graph_view.rs  mod.rs  timeline_view.rs
crates/ww-cli/tests/: cli_commands.rs
crates/ww-core/: Cargo.toml
crates/ww-core/src/: component.rs  entity.rs  error.rs  lib.rs  query.rs  relationship.rs  timeline.rs  world.rs
crates/ww-dsl/: Cargo.toml
crates/ww-dsl/src/: ast.rs  compiler.rs  diagnostics.rs  lexer.rs  lib.rs  parser.rs  resolver.rs
crates/ww-fiction/: Cargo.toml
crates/ww-fiction/src/: error.rs  lib.rs  player.rs  session.rs  system.rs
crates/ww-fiction/src/choice/: condition.rs  dialogue.rs  effect.rs  mod.rs  state.rs
crates/ww-fiction/src/narrator/: config.rs  mod.rs  templates.rs
crates/ww-fiction/src/parser/: command.rs  mod.rs  resolver.rs
crates/ww-gui/: Cargo.toml
crates/ww-gui/src/: app.rs  input.rs  lib.rs  main.rs
crates/ww-gui/src/screen/: dice.rs  explorer.rs  graph.rs  mod.rs  play.rs  sheet.rs  solo.rs  timeline.rs  title.rs
crates/ww-gui/src/theme/: font.rs  mod.rs  sprites.rs
crates/ww-gui/src/widget/: bar.rs  button.rs  input.rs  label.rs  list.rs  mod.rs  panel.rs  tabs.rs  text_area.rs
crates/ww-lsp/: Cargo.toml
crates/ww-lsp/src/: main.rs  server.rs
crates/ww-mechanics/: Cargo.toml
crates/ww-mechanics/src/: error.rs  lib.rs  validate.rs
crates/ww-mechanics/src/combat/: action.rs  mod.rs
crates/ww-mechanics/src/dice/: mod.rs  pool.rs  roll.rs
crates/ww-mechanics/src/resolution/: count.rs  highest.rs  mod.rs  roll_under.rs  sum.rs
crates/ww-mechanics/src/rules/: mod.rs  preset.rs
crates/ww-mechanics/src/sheet/: mod.rs  track.rs
crates/ww-simulation/: Cargo.toml
crates/ww-simulation/src/: clock.rs  config.rs  context.rs  error.rs  event.rs  lib.rs  needs.rs  schedule.rs  simulation.rs  spatial.rs  system.rs
crates/ww-solo/: Cargo.toml
crates/ww-solo/src/: chaos.rs  config.rs  error.rs  lib.rs  scene.rs  session.rs
crates/ww-solo/src/journal/: entry.rs  log.rs  mod.rs
crates/ww-solo/src/oracle/: event.rs  fate_chart.rs  mod.rs  reaction.rs  tables.rs
crates/ww-solo/src/tracker/: mod.rs  npcs.rs  threads.rs
crates/ww-tui/: Cargo.toml
crates/ww-tui/src/: app.rs  lib.rs  main.rs  shared.rs  terminal.rs
crates/ww-tui/src/tabs/: dice.rs  explorer.rs  graph.rs  mod.rs  play.rs  sheet.rs  timeline.rs
crates/ww-tui/src/tabs/solo/: mod.rs
crates/ww-tui/src/tabs/solo/views/: actions.rs  input.rs  mod.rs  output.rs  sidebar.rs
doc/: README.tmpl.md
editors/vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: ww.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: ww.tmLanguage.json
iron-kingdoms/: characters.ww  factions.ww  history.ww  items.ww  locations.ww  lore.ww  mechanics.ww  world.ww
scripts/: generate-readme.sh
stellar-drift/: anomalies.ww  characters.ww  factions.ww  history.ww  locations.ww  mechanics.ww  species.ww  technology.ww  vessels.ww  world.ww
