[workspace]
resolver = "2"
members = [
    "crates/ww-core",
    "crates/ww-dsl",
    "crates/ww-cli",
    "crates/ww-lsp",
    "crates/ww-simulation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Parsing
logos = "0.15"
chumsky = "0.10"
ariadne = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Terminal output
comfy-table = "7"
colored = "3"

# Testing
insta = { version = "1", features = ["yaml"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Simulation
rand = { version = "0.9", features = ["std_rng"] }

# Internal crates
ww-core = { path = "crates/ww-core" }
ww-dsl = { path = "crates/ww-dsl" }

[workspace.lints.clippy]
all = { level = "deny" }

[workspace.lints.rust]
unsafe_code = { level = "forbid" }
missing_docs = { level = "deny" }
