[package]
name = "ww-cli"
description = "CLI and TUI for Weltenwanderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ww"
path = "src/main.rs"

[dependencies]
ww-core = { workspace = true }
ww-dsl = { workspace = true }
ww-simulation = { path = "../ww-simulation" }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
