[package]
name = "ww-core"
description = "Core types for Weltenwanderer: entities, relationships, and world model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
