[package]
name = "ww-mechanics"
description = "TTRPG game mechanics engine for Weltenwanderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ww-core = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
