[package]
name = "ww-tui"
description = "Terminal UI for Weltenwanderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ww-tui"
path = "src/main.rs"

[dependencies]
ww-core = { workspace = true }
ww-dsl = { workspace = true }
ww-fiction = { workspace = true }
ww-solo = { workspace = true }
ww-mechanics = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
